--- a/src/renderer/assets/styles/shame.scss
+++ b/src/renderer/assets/styles/shame.scss
@@ -27,7 +27,7 @@ body {
   width: 100vw;
   top:0px;
   left:0px;
-  z-index: 99999;
+  z-index: 1051; // Boostrap Modal is 1050
 }
 #app {
   -webkit-font-smoothing: antialiased;
